--- a/LABCICLOUD/process/job_teste_0.1.properties
+++ b/LABCICLOUD/process/job_teste_0.1.properties
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:TalendProperties="http://www.talend.org/properties">
   <TalendProperties:Property xmi:id="_TuFEMBUQEe62-tBrOI8uSw" id="_TuCA4BUQEe62-tBrOI8uSw" label="job_teste" version="0.1" statusCode="" item="_TuFEMhUQEe62-tBrOI8uSw" displayName="job_teste">
-    <author href="../../C:/Honda/Talend-Studio-20221003_1400-V8.0.1/#/1"/>
+    <author href="../talend.project#_Y5bkMhUPEe62-tBrOI8uSw"/>
     <additionalProperties xmi:id="_TwW8IBUQEe62-tBrOI8uSw" key="created_product_fullname" value="Talend Cloud API Services Platform"/>
     <additionalProperties xmi:id="_TwW8IRUQEe62-tBrOI8uSw" key="created_product_version" value="8.0.1.20230515_1349-patch"/>
     <additionalProperties xmi:id="_TwW8IhUQEe62-tBrOI8uSw" key="created_date" value="2023-06-27T14:30:28.450-0300"/>
