--- a/LABCICLOUD/talend.project
+++ b/LABCICLOUD/talend.project
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:TalendProperties="http://www.talend.org/properties">
-  <TalendProperties:Project xmi:id="_Y5bkMRUPEe62-tBrOI8uSw" label="labcicloud" description="" language="java" technicalLabel="LABCICLOUD" author="_Y5bkMhUPEe62-tBrOI8uSw" productVersion="Talend Cloud API Services Platform-8.0.1.20220412_1227-patch" url="{&quot;commitLogPattern&quot;:&quot;{0}&quot;,&quot;location&quot;:&quot;https://github.com/alefigjesus/labcicloud.git&quot;,&quot;settings&quot;:&quot;000&quot;,&quot;storage&quot;:&quot;git&quot;}" type="DQ" itemsRelationVersion="1.3" bigData="false">
+  <TalendProperties:Project xmi:id="_Y5bkMRUPEe62-tBrOI8uSw" label="labcicloud" description="" language="java" technicalLabel="LABCICLOUD" author="_Y5bkMhUPEe62-tBrOI8uSw" productVersion="Talend Cloud API Services Platform-8.0.1.20230612_1054-patch" url="{&quot;commitLogPattern&quot;:&quot;{0}&quot;,&quot;location&quot;:&quot;https://github.com/alefigjesus/labcicloud.git&quot;,&quot;settings&quot;:&quot;000&quot;,&quot;storage&quot;:&quot;git&quot;}" type="DQ" itemsRelationVersion="1.3" bigData="false">
     <migrationTask xmi:id="_Y85u8BUPEe62-tBrOI8uSw" id="org.talend.repository.model.migration.CheckProductVersionMigrationTask" breaks="7.1.0" version="7.1.1"/>
   </TalendProperties:Project>
   <TalendProperties:User xmi:id="_Y5bkMhUPEe62-tBrOI8uSw" login="alessandra.figueiredo@trial45267.us.talend.com" firstName="Alessandra" lastName="Jesus" type="DQ"/>
+  <TalendProperties:User xmi:id="_BQdn8CJ6Ee6emZRKGqu2gA" login="anafjesus01@trial46134.us.talend.com" firstName="Ana" lastName="Jesus" type="DQ"/>
 </xmi:XMI>
