--- a/LABCICLOUD/process/JoinDataDB_0.1.properties
+++ b/LABCICLOUD/process/JoinDataDB_0.1.properties
@@ -9,8 +9,8 @@
     <additionalProperties xmi:id="_cezlNKtkEeiv4azgc0C-kA" key="created_product_version" value="6.3.1.20161216_1026"/>
     <additionalProperties xmi:id="_cezlNatkEeiv4azgc0C-kA" key="created_date" value="2015-05-20T06:05:45.196-0700"/>
     <additionalProperties xmi:id="_cezlNqtkEeiv4azgc0C-kA" key="modified_product_fullname" value="Talend Cloud API Services Platform"/>
-    <additionalProperties xmi:id="_cezlN6tkEeiv4azgc0C-kA" key="modified_product_version" value="8.0.1.20230612_1054-patch"/>
-    <additionalProperties xmi:id="_cezlOKtkEeiv4azgc0C-kA" key="modified_date" value="2023-07-26T17:26:38.079+0000"/>
+    <additionalProperties xmi:id="_cezlN6tkEeiv4azgc0C-kA" key="modified_product_version" value="8.0.1.20230515_1349-patch"/>
+    <additionalProperties xmi:id="_cezlOKtkEeiv4azgc0C-kA" key="modified_date" value="2023-07-31T15:06:20.953-0300"/>
   </TalendProperties:Property>
   <TalendProperties:ItemState xmi:id="_sPOBwCKEEe6emZRKGqu2gA" path=""/>
   <TalendProperties:ProcessItem xmi:id="_7SGCw_7wEeSgjrPDZFTtUw" property="_7SGCwf7wEeSgjrPDZFTtUw" state="_sPOBwCKEEe6emZRKGqu2gA">
