--- a/LABCICLOUD/tests/process/_BsrZMDB4Ee6e-poB14j1_Q/Test_Sort2_0.1.properties
+++ b/LABCICLOUD/tests/process/_BsrZMDB4Ee6e-poB14j1_Q/Test_Sort2_0.1.properties
@@ -7,11 +7,11 @@
     <additionalProperties xmi:id="_G1cp0jB4Ee6e-poB14j1_Q" key="created_date" value="2023-08-01T11:31:30.797-0300"/>
     <additionalProperties xmi:id="_G1cp0zB4Ee6e-poB14j1_Q" key="modified_product_fullname" value="Talend Cloud API Services Platform"/>
     <additionalProperties xmi:id="_G1cp1DB4Ee6e-poB14j1_Q" key="modified_product_version" value="8.0.1.20230515_1349-patch"/>
-    <additionalProperties xmi:id="_G1cp1TB4Ee6e-poB14j1_Q" key="modified_date" value="2023-08-01T11:32:44.200-0300"/>
+    <additionalProperties xmi:id="_G1cp1TB4Ee6e-poB14j1_Q" key="modified_date" value="2023-08-01T14:07:37.637-0300"/>
   </TalendProperties:Property>
   <TalendProperties:ItemState xmi:id="_G0-vwTB4Ee6e-poB14j1_Q" path="process/_BsrZMDB4Ee6e-poB14j1_Q"/>
   <testConProperties:TestContainerItem xmi:id="_G0-vwjB4Ee6e-poB14j1_Q" property="_G0-vwDB4Ee6e-poB14j1_Q" state="_G0-vwTB4Ee6e-poB14j1_Q">
-    <process href="Test_Sort2_0.1.item#_RxeSgDB4Ee6e-poB14j1_Q"/>
-    <testContainerProcess href="Test_Sort2_0.1.item#_RxeSgDB4Ee6e-poB14j1_Q"/>
+    <process href="Test_Sort2_0.1.item#_6mmFUDCNEe6e-poB14j1_Q"/>
+    <testContainerProcess href="Test_Sort2_0.1.item#_6mmFUDCNEe6e-poB14j1_Q"/>
   </testConProperties:TestContainerItem>
 </xmi:XMI>
