EstudoDataDB ajustado tDie2 v2

--- a/LABCICLOUD/tests/process/_g-nX4C_EEe6FO_0Y8phNFQ/Test_Estudo_TSort_0.1.properties
+++ b/LABCICLOUD/tests/process/_g-nX4C_EEe6FO_0Y8phNFQ/Test_Estudo_TSort_0.1.properties
@@ -7,11 +7,11 @@
     <additionalProperties xmi:id="_0KN0oi_FEe6FO_0Y8phNFQ" key="created_date" value="2023-07-31T14:15:15.050-0300"/>
     <additionalProperties xmi:id="_0KN0oy_FEe6FO_0Y8phNFQ" key="modified_product_fullname" value="Talend Cloud API Services Platform"/>
     <additionalProperties xmi:id="_0KN0pC_FEe6FO_0Y8phNFQ" key="modified_product_version" value="8.0.1.20230515_1349-patch"/>
-    <additionalProperties xmi:id="_0KN0pS_FEe6FO_0Y8phNFQ" key="modified_date" value="2023-08-02T16:50:18.653-0300"/>
+    <additionalProperties xmi:id="_0KN0pS_FEe6FO_0Y8phNFQ" key="modified_date" value="2023-08-02T17:07:14.882-0300"/>
   </TalendProperties:Property>
   <TalendProperties:ItemState xmi:id="_0J65wS_FEe6FO_0Y8phNFQ" path="process/_g-nX4C_EEe6FO_0Y8phNFQ"/>
   <testConProperties:TestContainerItem xmi:id="_0J65wi_FEe6FO_0Y8phNFQ" property="_0J65wC_FEe6FO_0Y8phNFQ" state="_0J65wS_FEe6FO_0Y8phNFQ">
-    <process href="Test_Estudo_TSort_0.1.item#_ztgc0DFtEe62ToXULza4CQ"/>
-    <testContainerProcess href="Test_Estudo_TSort_0.1.item#_ztgc0DFtEe62ToXULza4CQ"/>
+    <process href="Test_Estudo_TSort_0.1.item#_LJBaIDFwEe62ToXULza4CQ"/>
+    <testContainerProcess href="Test_Estudo_TSort_0.1.item#_LJBaIDFwEe62ToXULza4CQ"/>
   </testConProperties:TestContainerItem>
 </xmi:XMI>
