--- a/LABCICLOUD/tests/process/_ZoIq0O3hEeawiph590D2RA/TestCase_tSort_0.1.properties
+++ b/LABCICLOUD/tests/process/_ZoIq0O3hEeawiph590D2RA/TestCase_tSort_0.1.properties
@@ -5,9 +5,9 @@
     <additionalProperties xmi:id="_oxrGUAIzEeq5z6Zn8E1eMw" key="created_product_fullname" value="Talend Cloud Data Management Platform"/>
     <additionalProperties xmi:id="_oxrGUQIzEeq5z6Zn8E1eMw" key="created_product_version" value="7.2.1.20191015_1131-patch"/>
     <additionalProperties xmi:id="_oxrGUgIzEeq5z6Zn8E1eMw" key="created_date" value="2019-11-08T14:25:39.125+0000"/>
-    <additionalProperties xmi:id="_oxrGUwIzEeq5z6Zn8E1eMw" key="modified_product_fullname" value="Talend Cloud Data Management Platform"/>
-    <additionalProperties xmi:id="_oxrGVAIzEeq5z6Zn8E1eMw" key="modified_product_version" value="7.3.1.20200219_1130"/>
-    <additionalProperties xmi:id="_oxrGVQIzEeq5z6Zn8E1eMw" key="modified_date" value="2020-04-02T12:17:26.250+0000"/>
+    <additionalProperties xmi:id="_oxrGUwIzEeq5z6Zn8E1eMw" key="modified_product_fullname" value="Talend Cloud API Services Platform"/>
+    <additionalProperties xmi:id="_oxrGVAIzEeq5z6Zn8E1eMw" key="modified_product_version" value="8.0.1.20230515_1349-patch"/>
+    <additionalProperties xmi:id="_oxrGVQIzEeq5z6Zn8E1eMw" key="modified_date" value="2023-08-04T11:22:26.891-0300"/>
   </TalendProperties:Property>
   <TalendProperties:ItemState xmi:id="_sT1dOCKEEe6emZRKGqu2gA" path="process/_ZoIq0O3hEeawiph590D2RA"/>
   <testConProperties:TestContainerItem xmi:id="_oxXkZAIzEeq5z6Zn8E1eMw" property="_oxXkYgIzEeq5z6Zn8E1eMw" state="_sT1dOCKEEe6emZRKGqu2gA">
